# SensorFusion

./: README.md
Lecture_materials/Kalman2D/: CMakeLists.txt  README.md
Lecture_materials/Kalman2D/src/: Jakobian.cpp  RMSE.cpp  tracking.cpp
Lecture_materials/Notes/: Kalman.ipynb
Lecture_materials/Notes/.ipynb_checkpoints/: Kalman_Notes-checkpoint.ipynb
Project/: CMakeLists.txt  README.md  generate_VS_15_2_10.bat
Project/results/: 02-07-2019 22_11_39_RMSE_FUSION.txt  02-07-2019 22_23_50_RMSE_LIDAR.txt  02-07-2019 22_25_44_RMSE_RADAR.txt
Project/results/.ipynb_checkpoints/: visu_RMSE-checkpoint.ipynb
Project/src/: FusionEKF.cpp  FusionEKF.h  kalman_filter.cpp  kalman_filter.h  main.cpp  measurement_package.h  tools.cpp  tools.h
